made look cooler

--- a/index.html
+++ b/index.html
@@ -109,60 +109,36 @@
                 <h2>Explore Topics</h2>
                 <div class="categories-grid">
                     <a href="#" class="category-card">
-                        <div class="category-tags">
-                            <span class="tag tag-ai">
-                                <object data="icons/ai.svg" type="image/svg+xml"></object>
-                                AI in Medicine
-                            </span>
-                            <span class="tag tag-tech">
-                                <object data="icons/tech.svg" type="image/svg+xml"></object>
-                                Technology
-                            </span>
+                        <div class="category-icons">
+                            <object data="icons/ai.svg" type="image/svg+xml" class="category-icon"></object>
+                            <object data="icons/tech.svg" type="image/svg+xml" class="category-icon"></object>
                         </div>
                         <h3 class="category-name">AI in Healthcare</h3>
                         <p class="category-description">Exploring the impact of artificial intelligence on clinical practice and patient care.</p>
                         <span class="category-count">24 Episodes</span>
                     </a>
                     <a href="#" class="category-card">
-                        <div class="category-tags">
-                            <span class="tag tag-health">
-                                <object data="icons/health.svg" type="image/svg+xml"></object>
-                                Digital Health
-                            </span>
-                            <span class="tag tag-innovation">
-                                <object data="icons/innovation.svg" type="image/svg+xml"></object>
-                                Innovation
-                            </span>
+                        <div class="category-icons">
+                            <object data="icons/health.svg" type="image/svg+xml" class="category-icon"></object>
+                            <object data="icons/innovation.svg" type="image/svg+xml" class="category-icon"></object>
                         </div>
                         <h3 class="category-name">Digital Health Solutions</h3>
                         <p class="category-description">The latest in telemedicine, health apps, and digital therapeutics.</p>
                         <span class="category-count">18 Episodes</span>
                     </a>
                     <a href="#" class="category-card">
-                        <div class="category-tags">
-                            <span class="tag tag-device">
-                                <object data="icons/device.svg" type="image/svg+xml"></object>
-                                Medical Devices
-                            </span>
-                            <span class="tag tag-impact">
-                                <object data="icons/impact.svg" type="image/svg+xml"></object>
-                                High Impact
-                            </span>
+                        <div class="category-icons">
+                            <object data="icons/device.svg" type="image/svg+xml" class="category-icon"></object>
+                            <object data="icons/impact.svg" type="image/svg+xml" class="category-icon"></object>
                         </div>
                         <h3 class="category-name">Medical Devices & Wearables</h3>
                         <p class="category-description">Innovative devices transforming patient monitoring and treatment.</p>
                         <span class="category-count">15 Episodes</span>
                     </a>
                     <a href="#" class="category-card">
-                        <div class="category-tags">
-                            <span class="tag tag-startup">
-                                <object data="icons/startup.svg" type="image/svg+xml"></object>
-                                Startups
-                            </span>
-                            <span class="tag tag-growth">
-                                <object data="icons/growth.svg" type="image/svg+xml"></object>
-                                Growth
-                            </span>
+                        <div class="category-icons">
+                            <object data="icons/startup.svg" type="image/svg+xml" class="category-icon"></object>
+                            <object data="icons/growth.svg" type="image/svg+xml" class="category-icon"></object>
                         </div>
                         <h3 class="category-name">Healthcare Startups</h3>
                         <p class="category-description">Stories from founders building the future of healthcare.</p>
